# STM32_Parola

./: .gitignore  .gitmodules  CMakeLists.txt  cm.sh
src/: main.c  main.h  main_parola.c
